# rocket_static_fs

./: .gitignore  Cargo.toml  README.md
src/: build.rs  lib.rs
src/fs/: mod.rs
src/fs/embedded/: mod.rs
src/io/: mod.rs
testdata/: zzz.txt
