[package]
name = "rocket_static_fs"
version = "0.3.1"
description = "A simple static file server for the rocket framework."
repository = "https://github.com/ekranos/rocket_static_fs"
homepage = "https://github.com/ekranos/rocket_static_fs"
documentation = "https://docs.rs/rocket_static_fs"
license = "MIT/Apache-2.0"
readme = "README.md"
authors = ["Marvin Lee Fimmel <kontakt@ekranos.me>"]
build = "src/build.rs"

[features]
test_embedded = []

[dependencies]
rocket = "0.3"
chrono = "0.4"
mime_guess = "1.8"
flate2 = "1.0"
lazy_static = "1.0"
regex = "0.2"
byteorder = "1.2"
walkdir = "2"

[dev-dependencies]
rocket_codegen = "0.3"